# pp2

pp-2-lab7-matrix-2-d/zaj7Matrix/: matrix.cpp  matrix.h
pp2-lab10-sorteduniquevectoredlist/: GRADE.md
pp2-lab10-sorteduniquevectoredlist/zaj10SortedUniqueVectoredList/: CMakeLists.txt  SortedUniqueVectoredList.cpp  SortedUniqueVectoredList.h
pp2-lab11-ptrcstringvector/: GRADE.md
pp2-lab11-ptrcstringvector/zaj11PtrCStringVector/: CMakeLists.txt  PtrCStringVector.cpp
pp2-lab13-filematrix/: GRADE.md
pp2-lab13-filematrix/zaj13FileMatrix/: CMakeLists.txt  Dockerfile  FileMatrix.hpp
pp2-lab14-mystring/: GRADE.md
pp2-lab14-mystring/zaj14MyString/: CMakeLists.txt  main.cpp  mystring.cpp  mystring.h
pp2-lab2-systems/: GRADE.md
pp2-lab2-systems/lab2systems/: CMakeLists.txt  README.md  linux.cpp  linux.h  main.cpp  user.cpp  user.h  windows.cpp  windows.h
pp2-lab3-inheritance/: GRADE.md
pp2-lab3-inheritance/lab3inheritance/: CMakeLists.txt  README.md  enemy.cpp  enemy.h  engine.cpp  engine.h  object.cpp  object.h  player.h  shoot.h
pp2-lab4-simplestring/: GRADE.md
pp2-lab4-simplestring/lab4SimpleString/: CMakeLists.txt  main.cpp  simpleString.cpp  simpleString.h
pp2-lab5-containerbenchmark/: GRADE.md
pp2-lab5-containerbenchmark/lab5ContainerBenchmark/: CMakeLists.txt  Doxyfile  containerWrapper.cpp  containerWrapper.h  main.cpp
pp2-lab5-containerbenchmark/lab5ContainerBenchmark/benchmark/: CMakeLists.txt
pp2-lab5-containerbenchmark/lab5ContainerBenchmark/benchmark/lib/: .directory
pp2-lab6-shapesdrawing/: GRADE.md
pp2-lab6-shapesdrawing/zaj6ShapeDrawing/: CMakeLists.txt  circle.cpp  circle.h  main.cpp  (+5 more)
pp2-lab7-matrix-2-d/: GRADE.md
pp2-lab8i9-uniqueobjectlist-inside-parser/: GRADE.md
pp2-lab8i9-uniqueobjectlist-inside-parser/zaj8i9UniqueObjectList_and_parser/systemTests/: CMakeLists.txt
pp2-lab8i9-uniqueobjectlist-inside-parser/zaj8i9UniqueObjectList_and_parser/systemTests/inputOutputData/: getByIndexComplexObject.in.txt  getByIndexComplexObject.out.txt  mulDifferentTypes.in.txt  mulDifferentTypes.out.txt  sumDoubleObject.in.txt  sumDoubleObject.out.txt  sumStringObject.in.txt  sumStringObject.out.txt  sumStringObjectWhenNoStringObject.in.txt
(+21 files in other folders)
